examples/misc/error/compilation/eval_equal.bfr
let _ = (1 = "1")

let main = []